--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tribute Page</title>
-    <link rel="stylesheet" href="app.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tribute Page</title>
+  <link rel="stylesheet" href="app.css">
 </head>
+
 <body>
-    
-    <main id="main">
-      <h1 id="title">Historia motoryzacji</h1>
-      <div id="img-div">
-        <figure>
-        <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/2/2d/1911_Ford_Model_T_Touring_2.jpg" alt="Photo of old car">
-          <figcaption id="img-caption">Ford Model T z 1911</figcaption>
-        </figure> 
-      </div>
-        <section>
-        <h3 id="tribute-info">Kalendarium:</h3>
-        <ul class="dates">
-          <li><strong>ok. 4000 p.n.e</strong> – wynalezienie koła</li>
-          <li><strong>1801</strong> – parowy trójkołowiec Richarda Trevithicka</li>
-          <li><strong>1875</strong> - pierwszy pojazd z silnikiem spalinowym – Siegfried Marcus, Wiedeń</li>
-          <li><strong>1894</strong> - we Francji odbył się pierwszy wyścig samochodowy z serii Grand Prix na 126 km trasie Paryż – Rouen</li>
-          <li><strong>1904</strong> – w Warszawie powstają omnibusy z silnikiem</li>
-          <li><strong>1913</strong> – taśma produkcyjna – Henry Ford</li>
-          <li><strong>1932</strong> – automatyczna skrzynia biegów – F.Kreis, Niemcy</li>
-        </ul>
-      </section>
-      <footer class="footer">
-        <h4><a href="https://pl.wikipedia.org/wiki/Historia_motoryzacji" id="tribute-link" target="_blank"> Więcej o historii motoryzacji </a></h4>
-      </footer>
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-      </div>
-    </main> 
-   
-  </body>
-  </html>
+
+  <div id="main">
+    <h1 id="title">Historia motoryzacji</h1>
+    <p><em>"Ludzie o niezmiennych zasadach są jak samochody jadące po szynach"</em><br>
+      ~ Roberto Rossellini</p>
+
+    <div id="img-div">
+      <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/2/2d/1911_Ford_Model_T_Touring_2.jpg"
+        alt="Photo of old car">
+      <figcaption id="img-caption">Ford Model T z 1911</figcaption>
+    </div>
+    <div id="tribute-info">
+      <h3>Kalendarium:</h3>
+      <ul class="dates">
+        <li><strong>ok. 4000 p.n.e</strong> – wynalezienie koła</li>
+        <li><strong>1801</strong> – parowy trójkołowiec Richarda Trevithicka</li>
+        <li><strong>1875</strong> - pierwszy pojazd z silnikiem spalinowym – Siegfried Marcus, Wiedeń</li>
+        <li><strong>1894</strong> - we Francji odbył się pierwszy wyścig samochodowy z serii Grand Prix na 126 km trasie
+          Paryż – Rouen</li>
+        <li><strong>1904</strong> – w Warszawie powstają omnibusy z silnikiem</li>
+        <li><strong>1913</strong> – taśma produkcyjna – Henry Ford</li>
+        <li><strong>1932</strong> – automatyczna skrzynia biegów – F.Kreis, Niemcy</li>
+      </ul>
+    </div>
+    <footer class="footer">
+      <h4><a id="tribute-link" href="https://pl.wikipedia.org/wiki/Historia_motoryzacji" target="_blank"> Więcej o
+          historii motoryzacji </a></h4>
+    </footer>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  </div>
+
+</body>
+
+</html>
